--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,12 +15,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/provider": "^1.1.3",
+    "ai": "beta",
+    "@ai-sdk/openai": "beta",
+    "@ai-sdk/provider": "beta",
     "@icons-pack/react-simple-icons": "^13.5.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
-    "@openai/agents": "^0.0.13",
-    "@openai/agents-extensions": "^0.0.13",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -59,7 +58,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.25.67",
+    "zod": "3.25.76",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
