--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -53,9 +53,11 @@ utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 utoipauto = "0.2"
 
 [dev-dependencies]
-tauri-mcp = "0.1"
 tempfile = "3.8"
 rstest = "0.25.0"
 rstest_reuse = "0.7.0"
 sea-orm-cli = "1.1.14"
 tower = { version = "0.5", features = ["util"] }
+
+[target."cfg(target_os = \"macos\")".dev-dependencies]
+tauri-mcp = "0.1"
