--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -77,6 +77,8 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: latest
+          run_install: false
+        
 
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
