--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -57,6 +57,8 @@ jobs:
           cargo fmt
           
           if ! git diff --exit-code; then
+            git config --local user.email "${{ github.actor }}@users.noreply.github.com"
+            git config --local user.name "${{ github.actor }}"
             git add .
             git commit -m "fix: apply cargo fix and formatting changes"
             git push
@@ -127,13 +129,11 @@ jobs:
         run: |
           
           if ! git diff --exit-code; then
-            echo "📝 OpenAPI schema or TypeScript client has changes, committing automatically..."
+            git config --local user.email "${{ github.actor }}@users.noreply.github.com"
+            git config --local user.name "${{ github.actor }}"
             git add openapi.json src/lib/api/
             git commit -m "chore: update OpenAPI schema and TypeScript client"
             git push
-            echo "✅ Changes committed and pushed"
-          else
-            echo "✅ OpenAPI schema and TypeScript client are up to date"
           fi
 
   zizmor:
