--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -132,7 +132,7 @@ jobs:
           if ! git diff --exit-code; then
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
-            git add openapi.json src/lib/api/
+            git add .
             git commit -m "chore: update OpenAPI schema and TypeScript client"
             git push --no-verify
           fi
