feat: implement SSE streaming infrastructure for agent chat
- Add new agent module with SSE endpoint at /api/agent/chat
- Implement Vercel AI SDK v5 protocol with all event types
- Add CORS support and OPTIONS handling for preflight requests
- Create comprehensive Rust types for SSE messages
- Add tokio-stream dependency for async streaming
- Currently uses mock data for testing (agent integration pending)

This provides the foundation for unified streaming across chat and agent modes,
addressing the architecture concerns about duplicate streaming implementations.

--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
 
 [dependencies]
 tokio = { version = "1.37", features = ["process", "io-util", "macros", "rt-multi-thread", "io-std"] }
+tokio-stream = "0.1"
 tokio-util = "0.7"
 tauri = { version = "2", features = ["test"] }
 tauri-plugin-opener = "2"
