--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -86,6 +86,8 @@ jobs:
           platform: ${{ matrix.platform }}
 
       - uses: tauri-apps/tauri-action@564aea5a8075c7a54c167bb0cf5b3255314a7f9d # v0.5.22
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           projectPath: desktop
