--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - release-*
   workflow_dispatch:
 
 permissions:
@@ -23,6 +24,7 @@ jobs:
       contents: write
       pull-requests: write
       issues: write
+      releases: write
       id-token: write
     outputs:
       desktop_release_created: ${{ steps.release-please.outputs['desktop--release_created'] }}
