--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -128,8 +128,8 @@ jobs:
       - name: Check for changes and commit if needed
         working-directory: desktop
         run: |
-          
-          if ! git diff --exit-code; then
+          # Check both unstaged and staged changes
+          if ! git diff --exit-code || ! git diff --cached --exit-code; then
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git add .
