--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
 [dependencies]
 tokio = { version = "1.37", features = ["process", "io-util", "macros", "rt-multi-thread", "io-std"] }
 tokio-util = "0.7"
+tokio-stream = "0.1.17"
 tauri = { version = "2", features = ["test"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
@@ -52,6 +53,8 @@ utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "macros"]
 utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 utoipauto = "0.2"
 once_cell = "1.21.3"
+tower-http = { version = "0.6", features = ["cors"] }
+ollama-rs = { version = "0.3.2", features = ["stream"] }
 
 [dev-dependencies]
 tauri-mcp = "0.1"
