fix: resolve CORS issues and TypeScript errors in SSE chat implementation
- Add tower-http CORS middleware to agent router for proper error handling
- Fix CORS headers on all responses including error responses (422)
- Remove unused variables and parameters to fix TypeScript compilation
- Clean up deprecated agent chat hooks and performance optimization files
- Update chat components to use SSE streaming with Vercel AI SDK
- Add CLAUDE.md documentation file for development guidance

This ensures the frontend can properly communicate with the SSE endpoint
without CORS blocking, especially for error responses.

--- a/desktop/.gitignore
+++ b/desktop/.gitignore
@@ -25,4 +25,7 @@ mcp.json
 # Serena and Claude files
 .serena/
 docs
-CLAUDE.md
+.claude/** 
+!.claude/commands
+!.claude/templates
+!.claude/settings.json
