Fix SSE transport, rearrange backend routes

--- a/desktop/.gitignore
+++ b/desktop/.gitignore
@@ -24,8 +24,9 @@ mcp.json
 
 # Serena and Claude files
 .serena/
-docs
-.claude/** 
+# docs
+.claude/**
 !.claude/commands
+!.claude/commands/*
 !.claude/templates
 !.claude/settings.json
