--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -16,8 +16,8 @@ name = "archestra_ai_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [[bin]]
-name = "dump_openapi"
-path = "src/bin/dump_openapi.rs"
+name = "codegen"
+path = "src/bin/codegen.rs"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
@@ -53,8 +53,10 @@ utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "macros"]
 utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 utoipauto = "0.2"
 once_cell = "1.21.3"
-tower-http = { version = "0.6", features = ["cors"] }
+tower-http = { version = "0.6", features = ["cors", "trace"] }
 ollama-rs = { version = "0.3.2", features = ["stream"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dev-dependencies]
 tempfile = "3.8"
