--- a/desktop/package.json
+++ b/desktop/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-markdown": "^10.1.0",
+    "reconnecting-websocket": "^4.4.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.8.1",
     "tailwind-merge": "^3.3.1",
