--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -51,7 +51,7 @@ jobs:
   build-desktop-application-and-create-github-release:
     name: Build desktop application and create GitHub release
     runs-on: ${{ matrix.platform }}
-    # if: needs.release-please.outputs.desktop_release_created
+    if: needs.release-please.outputs.desktop_release_created
     needs:
       - release-please
     strategy:
@@ -70,38 +70,13 @@ jobs:
 
       - name: Generate a token
         id: generate-token
-        uses: actions/create-github-app-token@v2
+        uses: actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e # v2.0.6
         with:
           app-id: ${{ secrets.ARCHESTRA_RELEASER_GITHUB_APP_ID }}
           private-key: ${{ secrets.ARCHESTRA_RELEASER_GITHUB_APP_PRIVATE_KEY }}
 
-      - name: Update version from release-please tag
-        if: needs.release-please.outputs.desktop_release_created
-        env:
-          TAG_NAME: ${{ needs.release-please.outputs['desktop--tag_name'] }}
-        run: |
-          VERSION="${TAG_NAME#app-v}"
-          echo "Updating version to $VERSION from tag $TAG_NAME"
-
-          # Update package.json
-          jq --arg version "$VERSION" '.version = $version' desktop/package.json > desktop/package.json.tmp && mv desktop/package.json.tmp desktop/package.json
-
-          # Update Cargo.toml
-          sed -i.bak "s/^version = .*/version = \"$VERSION\"/" desktop/src-tauri/Cargo.toml && rm desktop/src-tauri/Cargo.toml.bak
-
-          # Update tauri.conf.json
-          jq --arg version "$VERSION" '.version = $version' desktop/src-tauri/tauri.conf.json > desktop/src-tauri/tauri.conf.json.tmp && mv desktop/src-tauri/tauri.conf.json.tmp desktop/src-tauri/tauri.conf.json
-
-      - name: setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: latest
-          run_install: true
+      - name: Setup frontend dependencies
+        uses: ./.github/actions/setup-frontend
 
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
@@ -119,6 +94,3 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
-
-      - run: |
-          echo "placeholder to build and publish desktop application"
