--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -2,6 +2,8 @@
   "bootstrap-sha": "d78ec51d21f8f58b0ff6f87795811aa2d7900099",
   "changelog-path": "CHANGELOG.md",
   "changelog-type": "default",
+  "bump-minor-pre-major": true,
+  "bump-patch-for-minor-pre-major": true,
   "changelog-sections": [
     {
       "section": "Features",
@@ -58,8 +60,6 @@
     "desktop": {
       "component": "desktop",
       "release-type": "simple",
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
       "extra-files": [
         {
           "type": "json",
@@ -77,6 +77,10 @@
           "jsonpath": "$.version"
         }
       ]
+    },
+    "oauth-proxy": {
+      "component": "oauth-proxy",
+      "release-type": "node"
     }
   },
   "plugins": [],
