--- a/oauth-proxy/package.json
+++ b/oauth-proxy/package.json
@@ -20,13 +20,19 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "lint-staged": "^16.1.2",
+    "prettier": "3.6.2",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^7.0.6",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
