--- a/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
+++ b/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
@@ -62,7 +62,7 @@ jobs:
           image_name: ${{ steps.env-vars.outputs.service_name }}
           image_tag: ${{ inputs.version }}
           dockerfile: ./oauth-proxy/Dockerfile
-          context: ./oauth-proxy
+          context: .
           gcloud_service_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Set image output
