--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@ca052bb54ab0790a636c9b5f226502c73d547a25 # v5.4.0
         with:
-          context: ./oauth-proxy
+          context: .
           file: ./oauth-proxy/Dockerfile
           push: false
           tags: oauth-proxy:test
