--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -56,6 +56,7 @@ jobs:
           platform: ${{ matrix.platform }}
 
       - name: Apply Rust fixes and formatting
+        shell: bash
         run: |
           cargo fix --allow-dirty --allow-staged
           cargo fmt
